--- a/app/views/publicmap.scala.html
+++ b/app/views/publicmap.scala.html
@@ -12,14 +12,12 @@
     <script src="@routes.Assets.at("contrib/js/bootstrap-datetimepicker.min.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("contrib/js/bootstrap-datetimepicker.min.js")" type="text/javascript"></script>
 
-    <script src="@routes.Assets.at("contrib/js/bootstrap-slider.min.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("contrib/js/leaflet.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("contrib/js/jquery.flot.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("contrib/js/jquery.flot.navigate.js")" type="text/javascript"></script>
 
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("contrib/css/bootstrap.css")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("contrib/css/bootstrap-datetimepicker.css")">
-    <link rel="stylesheet" media="screen" href="@routes.Assets.at("contrib/css/bootstrap-slider.min.css")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("contrib/css/leaflet.css")">
 
       <!-- Site specific details -->
@@ -55,15 +53,16 @@
                 <div class="row">
                   <label class="col-sm-3">Freq. (Hz)</label>
                   <div class="col-xs-1">
-                    <input type="checkbox" id="requestFrequency" checked="checked">
+                    <input type="checkbox" class="checkbox" id="requestFrequency" checked="checked">
                   </div>
-                  <label class="col-sm-1" id="min-frequency">40</label>
-                  <div class="col-sm-6">
-                    <input id="frequency-slider" type="text" class="span2" value=""
-                    data-slider-min="40" data-slider-max="80" data-slider-step="1"
-                    data-slider-value="[40,80]"/>
-                  </div>
-                  <label class="col-sm-1" id="max-frequency">80</label>
+                    <div class="form-group col-sm-4">
+                        <label class="sr-only" for="frequencyGt">Frequency Greater Than</label>
+                        <input type="text" class="form-control" id="frequencyGt" placeholder="">
+                    </div>
+                    <div class="form-group col-sm-4">
+                        <label class="sr-only" for="frequencyLt">Frequency Less Than</label>
+                        <input type="text" class="form-control" id="frequencyLt" placeholder="">
+                    </div>
                 </div>
 
                   <!-- Voltage filter -->
@@ -72,25 +71,27 @@
                   <div class="col-xs-1">
                     <input type="checkbox" id="requestVoltage" checked="checked">
                   </div>
-                  <label class="col-sm-1" id="min-voltage">90</label>
-                  <div class="col-sm-6">
-                    <input id="voltage-slider" type="text" class="span2" value=""
-                    data-slider-min="90" data-slider-max="150" data-slider-step="1"
-                    data-slider-value="[90,150]"/>
-                  </div>
-                  <label class="col-sm-1" id="max-voltage">150</label>
+                    <div class="form-group col-sm-4">
+                        <label class="sr-only" for="voltageGt">Voltage Greater Than</label>
+                        <input type="text" class="form-control" id="voltageGt" placeholder="">
+                    </div>
+                    <div class="form-group col-sm-4">
+                        <label class="sr-only" for="voltageLt">Voltage Less Than</label>
+                        <input type="text" class="form-control" id="votlageLt" placeholder="">
+                    </div>
                 </div>
 
                   <!-- Duration filter -->
                 <div class="row">
                   <label class="col-sm-4">Duration (sec)</label>
-                  <label class="col-sm-1">0</label>
-                  <div class="col-sm-6">
-                    <input id="duration-slider" type="text" class="span2" value=""
-                    data-slider-min="0" data-slider-max="60" data-slider-step="1"
-                    data-slider-value="[0,60]"/>
-                  </div>
-                  <label class="col-sm-1" id="max-duration">60</label>
+                    <div class="form-group col-sm-4">
+                        <label class="sr-only" for="voltageGt">Voltage Greater Than</label>
+                        <input type="text" class="form-control" id="voltageGt" placeholder="">
+                    </div>
+                    <div class="form-group col-sm-4">
+                        <label class="sr-only" for="voltageLt">Voltage Less Than</label>
+                        <input type="text" class="form-control" id="votlageLt" placeholder="">
+                    </div>
                 </div>
 
                   <!-- ITIC filter -->
