--- a/app/views/publicmap.scala.html
+++ b/app/views/publicmap.scala.html
@@ -24,6 +24,7 @@
     <script src="@routes.Assets.at("js/grid-map.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("js/itic-plotter.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("js/public-map.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("js/public-filters.js")" type="text/javascript"></script>
 
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/site.css")">
 
@@ -77,7 +78,7 @@
                     </div>
                     <div class="form-group col-sm-4">
                         <label class="sr-only" for="voltageLt">Voltage Less Than</label>
-                        <input type="text" class="form-control" id="votlageLt" placeholder="">
+                        <input type="text" class="form-control" id="voltageLt" placeholder="">
                     </div>
                 </div>
 
@@ -85,12 +86,12 @@
                 <div class="row">
                   <label class="col-sm-4">Duration (sec)</label>
                     <div class="form-group col-sm-4">
-                        <label class="sr-only" for="voltageGt">Voltage Greater Than</label>
-                        <input type="text" class="form-control" id="voltageGt" placeholder="">
+                        <label class="sr-only" for="durationGt">Duration Greater Than</label>
+                        <input type="text" class="form-control" id="durationGt" placeholder="">
                     </div>
                     <div class="form-group col-sm-4">
-                        <label class="sr-only" for="voltageLt">Voltage Less Than</label>
-                        <input type="text" class="form-control" id="votlageLt" placeholder="">
+                        <label class="sr-only" for="durationLt">Duration Less Than</label>
+                        <input type="text" class="form-control" id="durationLt" placeholder="">
                     </div>
                 </div>
 
@@ -252,6 +253,13 @@
     <script type="text/javascript">
       $(document).ready(function () {
         initPage("@play.Play.application().configuration().getString("opqhub.websockets.server")");
+
+        $("#resetBtn").click(function() {
+          filters.reset();
+        });
+        $("#updateBtn").click(function() {
+          ws.requestUpdate();
+        });
       });
     </script>
   </body>
