Fixed bug where zooming out on the map would cause the server to stop sending data.

--- a/app/views/publicmap.scala.html
+++ b/app/views/publicmap.scala.html
@@ -256,7 +256,7 @@
 
         $("#resetBtn").click(function() {
           filters.reset();
-         // map.gridMap.setView(map.gridMap.island.OAHU.latLng, map.gridMap.island.OAHU.defaultZoom);
+          map.gridMap.setView(map.gridMap.island.OAHU.latLng, map.gridMap.island.OAHU.defaultZoom);
         });
 
         $("#updateBtn").click(function() {
