--- a/app/views/signup.scala.html
+++ b/app/views/signup.scala.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/site.css")">
 
-    <!-- Validation 0-->
+    <!-- Validation -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.2/css/bootstrapValidator.min.css"/>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.2/js/bootstrapValidator.min.js"></script>
 
