Validation is auto called on update button, if it fails, update is not called.

--- a/app/views/publicmap.scala.html
+++ b/app/views/publicmap.scala.html
@@ -267,7 +267,9 @@
         });
 
         $("#updateBtn").click(function() {
-          ws.requestUpdate();
+          if(filters.validate('#messages')) {
+            ws.requestUpdate();
+          }
         });
     });
 
