--- a/app/views/privatetrends.scala.html
+++ b/app/views/privatetrends.scala.html
@@ -9,9 +9,7 @@
         <script src="@routes.Assets.at("contrib/js/jquery-2.1.1.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("contrib/js/moment.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("contrib/js/bootstrap.js")" type="text/javascript"></script>
-
-        <script src="@routes.Assets.at("contrib/js/dygraph-combined.js")" type="text/javascript"></script>
-
+        <script src="@routes.Assets.at("contrib/js/jquery.flot.js")" type="text/javascript"></script>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("contrib/css/bootstrap.css")">
 
         <!-- Site specific details -->
