--- a/app/views/privatetrends.scala.html
+++ b/app/views/privatetrends.scala.html
@@ -23,15 +23,15 @@
         <!-- Main content -->
         <div class="container" id="main-content">
             <div class="row">
-                Past 15 Minutes
+                Past 1 minute
                 <div id="trends-1m" class="col-lg-12" style="height: 200px"></div>
             </div>
             <div class="row">
-                Past 1 Day
+                Past 1 hour
                 <div id="trends-1h" class="col-lg-12" style="height: 200px"></div>
             </div>
             <div class="row">
-                Past 1 Week
+                Past 1 day
                 <div id="trends-1d" class="col-lg-12" style="height: 200px"></div>
             </div>
         </div>
@@ -44,7 +44,12 @@
                         series.push({label: boxId, data: data[boxId]});
                     }
                 }
-                $.plot(chart, series)
+                $.plot(chart, series, {
+                   yaxis: {
+                       min: 160,
+                       max: 80
+                   }
+                });
             }
 
             $(document ).ready(function() {
