--- a/app/views/privatetrends.scala.html
+++ b/app/views/privatetrends.scala.html
@@ -23,21 +23,33 @@
         <!-- Main content -->
         <div class="container" id="main-content">
             <div class="row">
-                Past 1 minute
-                <div id="trends-1m" class="col-lg-12" style="height: 200px"></div>
+                1 minute voltage
+                <div id="v-1m" class="col-lg-12" style="height: 200px"></div>
             </div>
             <div class="row">
-                Past 1 hour
-                <div id="trends-1h" class="col-lg-12" style="height: 200px"></div>
+                1 hour voltage
+                <div id="v-1h" class="col-lg-12" style="height: 200px"></div>
             </div>
             <div class="row">
-                Past 1 day
-                <div id="trends-1d" class="col-lg-12" style="height: 200px"></div>
+                1 day voltage
+                <div id="v-1d" class="col-lg-12" style="height: 200px"></div>
+            </div>
+            <div class="row">
+                1 minute frequency
+                <div id="v-1m" class="col-lg-12" style="height: 200px"></div>
+            </div>
+            <div class="row">
+                1 hour frequency
+                <div id="v-1h" class="col-lg-12" style="height: 200px"></div>
+            </div>
+            <div class="row">
+                1 day frequency
+                <div id="v-1d" class="col-lg-12" style="height: 200px"></div>
             </div>
         </div>
 
         <script type="text/javascript">
-            function makeCharts(data, chart) {
+            function makeCharts(data, chart, ymin, ymax) {
                 var series = [];
                 for(var boxId in data) {
                     if(data.hasOwnProperty(boxId)) {
@@ -46,28 +58,42 @@
                 }
                 $.plot(chart, series, {
                    yaxis: {
-                       min: 105,
-                       max: 135
+                       min: ymin,
+                       max: ymax
                    }
                 });
             }
 
             $(document ).ready(function() {
-                $.get('@routes.Data.getTrends(session.get("email"), utils.DateUtils.getPastTime(utils.DateUtils.getMillis, utils.DateUtils.TimeUnit.Minute, 1), utils.DateUtils.getMillis)')
+                $.get('@routes.Data.getVoltages(session.get("email"), utils.DateUtils.getPastTime(utils.DateUtils.getMillis, utils.DateUtils.TimeUnit.Minute, 1), utils.DateUtils.getMillis)')
                     .done(function(data) {
-                        makeCharts(data, "#trends-1m");
+                        makeCharts(data, "#v-1m", 105, 135);
                     });
 
-                $.get('@routes.Data.getTrends(session.get("email"), utils.DateUtils.getPastTime(utils.DateUtils.getMillis, utils.DateUtils.TimeUnit.Hour, 1), utils.DateUtils.getMillis)')
+                $.get('@routes.Data.getVoltages(session.get("email"), utils.DateUtils.getPastTime(utils.DateUtils.getMillis, utils.DateUtils.TimeUnit.Hour, 1), utils.DateUtils.getMillis)')
                     .done(function(data) {
-                        makeCharts(data, "#trends-1h");
+                        makeCharts(data, "#v-1h", 105, 135);
                     });
 
-                $.get('@routes.Data.getTrends(session.get("email"), utils.DateUtils.getPastTime(utils.DateUtils.getMillis, utils.DateUtils.TimeUnit.Day, 1), utils.DateUtils.getMillis)')
+                $.get('@routes.Data.getVoltages(session.get("email"), utils.DateUtils.getPastTime(utils.DateUtils.getMillis, utils.DateUtils.TimeUnit.Day, 1), utils.DateUtils.getMillis)')
                     .done(function(data) {
-                        makeCharts(data, "#trends-1d");
+                        makeCharts(data, "#v-1d", 105, 135);
                     });
 
+                $.get('@routes.Data.getVoltages(session.get("email"), utils.DateUtils.getPastTime(utils.DateUtils.getMillis, utils.DateUtils.TimeUnit.Minute, 1), utils.DateUtils.getMillis)')
+                .done(function(data) {
+                    makeCharts(data, "#f-1m", 55, 65);
+                });
+
+                $.get('@routes.Data.getVoltages(session.get("email"), utils.DateUtils.getPastTime(utils.DateUtils.getMillis, utils.DateUtils.TimeUnit.Hour, 1), utils.DateUtils.getMillis)')
+                .done(function(data) {
+                    makeCharts(data, "#f-1h", 55, 65);
+                });
+
+                $.get('@routes.Data.getVoltages(session.get("email"), utils.DateUtils.getPastTime(utils.DateUtils.getMillis, utils.DateUtils.TimeUnit.Day, 1), utils.DateUtils.getMillis)')
+                .done(function(data) {
+                    makeCharts(data, "#f-1d", 55, 65);
+                });
             });
         </script>
     </body>
