Fixed id names for frequency chart elements.

--- a/app/views/privatetrends.scala.html
+++ b/app/views/privatetrends.scala.html
@@ -36,15 +36,15 @@
             </div>
             <div class="row">
                 1 minute frequency
-                <div id="v-1m" class="col-lg-12" style="height: 200px"></div>
+                <div id="f-1m" class="col-lg-12" style="height: 200px"></div>
             </div>
             <div class="row">
                 1 hour frequency
-                <div id="v-1h" class="col-lg-12" style="height: 200px"></div>
+                <div id="f-1h" class="col-lg-12" style="height: 200px"></div>
             </div>
             <div class="row">
                 1 day frequency
-                <div id="v-1d" class="col-lg-12" style="height: 200px"></div>
+                <div id="f-1d" class="col-lg-12" style="height: 200px"></div>
             </div>
         </div>
 
