--- a/app/views/privatetrends.scala.html
+++ b/app/views/privatetrends.scala.html
@@ -23,23 +23,24 @@
         <!-- Main content -->
         <div class="container" id="main-content">
             <div class="row">
-
-                <div id="v-1m" class="col-lg-4" style="height: 200px"></div>
-
-
-                <div id="v-1h" class="col-lg-4" style="height: 200px"></div>
-
-
-                <div id="v-1d" class="col-lg-4" style="height: 200px"></div>
+                <div class="col-lg-6">
+                    <p>1 Minute (Voltage)</p>
+                    <div id="v-1m" style="height: 200px"></div>
+                </div>
+                <div class="col-lg-6">
+                    <p>1 Hour (Voltage)</p>
+                    <div id="v-1h" style="height: 200px"></div>
+                </div>
             </div>
             <div class="row">
-
-                <div id="f-1m" class="col-lg-4" style="height: 200px"></div>
-
-
-                <div id="f-1h" class="col-lg-4" style="height: 200px"></div>
-
-                <div id="f-1d" class="col-lg-4" style="height: 200px"></div>
+                <div class="col-lg-6">
+                    <p>1 Minute (Frequency)</p>
+                    <div id="f-1m" style="height: 200px"></div>
+                </div>
+                <div class="col-lg-6">
+                    <p>1 Hour (Frequency)</p>
+                    <div id="f-1h" style="height: 200px"></div>
+                </div>
             </div>
         </div>
 
@@ -70,11 +71,6 @@
                         makeCharts(data, "#v-1h", 105, 135);
                     });
 
-                $.get('@routes.Data.getVoltages(session.get("email"), utils.DateUtils.getPastTime(utils.DateUtils.getMillis, utils.DateUtils.TimeUnit.Day, 1), utils.DateUtils.getMillis)')
-                    .done(function(data) {
-                        makeCharts(data, "#v-1d", 105, 135);
-                    });
-
                 $.get('@routes.Data.getFrequencies(session.get("email"), utils.DateUtils.getPastTime(utils.DateUtils.getMillis, utils.DateUtils.TimeUnit.Minute, 1), utils.DateUtils.getMillis)')
                 .done(function(data) {
                     makeCharts(data, "#f-1m", 55, 65);
@@ -83,11 +79,6 @@
                 $.get('@routes.Data.getFrequencies(session.get("email"), utils.DateUtils.getPastTime(utils.DateUtils.getMillis, utils.DateUtils.TimeUnit.Hour, 1), utils.DateUtils.getMillis)')
                 .done(function(data) {
                     makeCharts(data, "#f-1h", 55, 65);
-                });
-
-                $.get('@routes.Data.getFrequencies(session.get("email"), utils.DateUtils.getPastTime(utils.DateUtils.getMillis, utils.DateUtils.TimeUnit.Day, 1), utils.DateUtils.getMillis)')
-                .done(function(data) {
-                    makeCharts(data, "#f-1d", 55, 65);
                 });
             });
         </script>
