Fixed name of new chart

--- a/app/views/privatetrends.scala.html
+++ b/app/views/privatetrends.scala.html
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <p>5 Minute (Frequency)</p>
-                    <div id="v-5m" style="height: 200px"></div>
+                    <div id="f-5m" style="height: 200px"></div>
                 </div>
                 <div class="col-lg-4">
                     <p>1 Hour (Frequency)</p>
