--- a/app/views/privatetrends.scala.html
+++ b/app/views/privatetrends.scala.html
@@ -63,6 +63,9 @@
                    yaxis: {
                        min: ymin,
                        max: ymax
+                   },
+                   xaxis: {
+                       ticks: 3
                    }
                 });
             }
