--- a/app/views/privatetrends.scala.html
+++ b/app/views/privatetrends.scala.html
@@ -66,7 +66,7 @@
                    },
                    xaxis: {
                        mode: "time",
-                       timeformat: "%H:%M"
+                       timeformat: "%H:%M",
                        ticks: 4
                    }
                 });
