Added flot time plugin to contrib dir

--- a/app/views/privatetrends.scala.html
+++ b/app/views/privatetrends.scala.html
@@ -10,10 +10,11 @@
         <script src="@routes.Assets.at("contrib/js/moment.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("contrib/js/bootstrap.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("contrib/js/jquery.flot.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("contrib/js/jquery.flot.time.js")" type="text/javascript"></script>
+
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("contrib/css/bootstrap.css")">
 
         <!-- Site specific details -->
-        <script src="@routes.Assets.at("js/trends.js")" type="text/javascript"></script>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/site.css")">
     </head>
     <body>
