--- a/app/views/publicmap.scala.html
+++ b/app/views/publicmap.scala.html
@@ -15,6 +15,7 @@
     <script src="@routes.Assets.at("contrib/js/leaflet.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("contrib/js/jquery.flot.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("contrib/js/jquery.flot.navigate.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("contrib/js/spin.min.js")" type="text/javascript"></script>
 
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("contrib/css/bootstrap.css")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("contrib/css/bootstrap-datetimepicker.css")">
@@ -259,7 +260,10 @@
     </div>
     <script type="text/javascript">
       $(document).ready(function () {
-        initPage("@play.Play.application().configuration().getString("opqhub.websockets.server")");
+
+
+        initPage('@play.Play.application().configuration().getString("opqhub.websockets.server")');
+
 
         $("#resetBtn").click(function() {
           filters.reset();
@@ -272,7 +276,6 @@
           }
         });
     });
-
     </script>
   </body>
 </html>
