--- a/app/views/privatemap.scala.html
+++ b/app/views/privatemap.scala.html
@@ -174,7 +174,47 @@
             </div>
           </div>
 
+          <!-- Stats -->
+          <div class="row">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title">Your Power Quality Stats</h3>
+              </div>
+              <div class="panel-body">
 
+                  <!-- Frequency filter -->
+                <div class="row">
+                  <table class="table table-condensed">
+                    <tbody>
+                      <tr>
+                        <td>Events Past Hour</td>
+                        <td id="details-device-id">3</td>
+                      </tr>
+                      <tr>
+                        <td>Events Past Day</td>
+                        <td id="details-device-description">15</td>
+                      </tr>
+                      <tr>
+                        <td>Events Past Week</td>
+                        <td id="details-frequency">214</td>
+                      </tr>
+                      <tr>
+                        <td>Global Events</td>
+                        <td id="details-voltage">3</td>
+                      </tr>
+                      <tr>
+                        <td>Your Power Quality Score</td>
+                        <td><b><font color="green" >95</font></b></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+
+
+              </div>
+              <div id="messages" class="invalid"></div>
+            </div>
+          </div>
         </div>
 
           <!-- Events and event details -->
